autocomplete validation and register form refactoring

--- a/src/app/views/user/user-register/user-register.component.html
+++ b/src/app/views/user/user-register/user-register.component.html
@@ -1,148 +1,125 @@
-<div class="user-register">
-  <div class="subheader text-center">
-    <h3>{{'user.create.title' | translate | uppercase}}</h3>
-    <div class="subheader-text fs-m0">{{'user.create.description' | translate}}</div>
+<div class="container-fluid">
+  <div class="page-header row">
+    <div class="col-xs-12">
+      <h3>{{"user.create.title" | translate | uppercase}}</h3>
+      <div>{{'user.create.description' | translate}}</div>
+    </div>
   </div>
 
-  <div class="centered-form-container">
-    <form class="centered-form" #form="ngForm" (ngSubmit)="onSubmit()">
-      <div class="material-group">
-        <input type="text" id="ssn" [(ngModel)]="userRegister.ssn" name="ssn" class="material-input" [ngClass]="{'not-empty': userRegister.ssn, 'has-error': errors.ssn}" required pattern="^[\d\-]+$" minlength="10">
-        <label for="ssn" class="material-label">{{'user.form.ssn' | translate}}</label>
+  <div class="page-form-container">
+    <form [formGroup]="registrationForm" novalidate (ngSubmit)="onSubmit()">
+      <div class="form-group material-group input-container" [ngClass]="{'has-error':!registrationForm.controls['ssn'].valid && registrationForm.controls['ssn'].touched}">
+        <input class="form-control material-input" type="text" placeholder="{{'user.form.ssn' | translate}}"
+               [formControl]="registrationForm.controls['ssn']">
 
-        <div class="fs-m0 material-group-error" *ngIf="form.controls.ssn && form.controls.ssn.invalid && form.controls.ssn.touched">
-          {{'user.form.ssn.validation' | translate}}
-        </div>
-        <div class="fs-m0 material-group-error" *ngIf="errors.ssn">
-          {{errors.ssn}}
-        </div>
+        <div *ngIf="!registrationForm.controls['ssn'].valid && registrationForm.controls['ssn'].touched"
+             class="alert alert-danger">{{'user.form.ssn.validation' | translate}}.</div>
+        <div *ngIf="errors.ssn" class="alert alert-danger">{{errors.ssn}}</div>
       </div>
 
-      <div class="material-group">
-        <input type="text" id="first-name" [(ngModel)]="userRegister.firstName" name="firstName" class="material-input" [ngClass]="{'not-empty': userRegister.firstName, 'has-error': errors.first_name}" required>
-        <label for="first-name" class="material-label">{{'user.form.first_name' | translate}}</label>
+      <div class="form-group material-group input-container" [ngClass]="{'has-error':!registrationForm.controls['first-name'].valid && registrationForm.controls['first-name'].touched}">
+        <input class="form-control material-input" type="text" placeholder="{{'user.form.first_name' | translate}}"
+               [formControl]="registrationForm.controls['first-name']">
 
-        <div class="fs-m0 material-group-error" *ngIf="form.controls.firstName && form.controls.firstName.invalid && form.controls.firstName.touched">
-          {{'user.form.first_name.validation' | translate}}
-        </div>
-        <div class="fs-m0 material-group-error" *ngIf="errors.first_name">
-          {{errors.first_name}}
-        </div>
+        <div *ngIf="!registrationForm.controls['first-name'].valid && registrationForm.controls['first-name'].touched"
+             class="alert alert-danger">{{'user.form.first_name.validation' | translate}}.</div>
+        <div *ngIf="errors.first_name" class="alert alert-danger">{{errors.first_name}}</div>
       </div>
 
-      <div class="material-group">
-        <input type="text" id="last-name" [(ngModel)]="userRegister.lastName" name="lastName" class="material-input" [ngClass]="{'not-empty': userRegister.lastName, 'has-error': errors.last_name}" required>
-        <label for="last-name" class="material-label">{{'user.form.last_name' | translate}}</label>
+      <div class="form-group material-group input-container" [ngClass]="{'has-error':!registrationForm.controls['last-name'].valid && registrationForm.controls['last-name'].touched}">
+        <input class="form-control material-input" type="text" placeholder="{{'user.form.last_name' | translate}}"
+               [formControl]="registrationForm.controls['last-name']">
 
-        <div class="fs-m0 material-group-error" *ngIf="form.controls.lastName && form.controls.lastName.invalid && form.controls.lastName.touched">
-          {{'user.form.last_name.validation' | translate}}
-        </div>
-        <div class="fs-m0 material-group-error" *ngIf="errors.last_name">
-          {{errors.last_name}}
-        </div>
+        <div *ngIf="!registrationForm.controls['last-name'].valid && registrationForm.controls['last-name'].touched"
+             class="alert alert-danger">{{'user.form.last_name.validation' | translate}}.</div>
+        <div *ngIf="errors.last_name" class="alert alert-danger">{{errors.last_name}}</div>
       </div>
 
-      <div class="material-group">
-        <input type="text" id="phone" [(ngModel)]="userRegister.phone" name="phone" class="material-input" [ngClass]="{'not-empty': userRegister.phone, 'has-error': errors.phone}" required minlength="9">
-        <label for="phone" class="material-label">{{'user.form.phone' | translate}}</label>
+      <div class="form-group material-group input-container" [ngClass]="{'has-error':!registrationForm.controls['phone'].valid && registrationForm.controls['phone'].touched}">
+        <input class="form-control material-input" type="text" placeholder="{{'user.form.phone' | translate}}"
+               [formControl]="registrationForm.controls['phone']">
 
-        <div class="fs-m0 material-group-error" *ngIf="form.controls.phone && form.controls.phone.invalid && form.controls.phone.touched">
-          {{'user.form.phone.validation' | translate}}
-        </div>
-        <div class="fs-m0 material-group-error" *ngIf="errors.phone">
-          {{errors.phone}}
-        </div>
+        <div *ngIf="!registrationForm.controls['phone'].valid && registrationForm.controls['phone'].touched"
+             class="alert alert-danger">{{'user.form.phone.validation' | translate}}.</div>
+        <div *ngIf="errors.phone" class="alert alert-danger">{{errors.phone}}</div>
       </div>
 
-      <div class="material-group">
-        <input type="text" id="email" [(ngModel)]="userRegister.email" name="email" class="material-input" [ngClass]="{'not-empty': userRegister.email, 'has-error': errors.email}"
-               required pattern="^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$">
-        <label for="email" class="material-label">{{'user.form.email' | translate}}</label>
+      <div class="form-group material-group input-container" [ngClass]="{'has-error':!registrationForm.controls['email'].valid && registrationForm.controls['email'].touched}">
+        <input class="form-control material-input" type="text" placeholder="{{'user.form.email' | translate}}"
+               [formControl]="registrationForm.controls['email']">
 
-        <div class="fs-m0 material-group-error" *ngIf="form.controls.email && form.controls.email.invalid && form.controls.email.touched">
-          {{'user.form.email.validation' | translate}}
-        </div>
-        <div class="fs-m0 material-group-error" *ngIf="errors.email">
-          {{errors.email}}
-        </div>
+        <div *ngIf="!registrationForm.controls['email'].valid && registrationForm.controls['email'].touched"
+             class="alert alert-danger">{{'user.form.email.validation' | translate}}.</div>
+        <div *ngIf="errors.email" class="alert alert-danger">{{errors.email}}</div>
       </div>
 
-      <div class="material-group">
+      <div class="form-group material-group input-container">
         <autocomplete-dropdown [lookupType]="'list'" [enumList]="statuses"
+                               [placeholder]="'user.form.current_status' | translate"
+                               [group]="registrationForm.controls['current-status']"
                                [(destination)]="userRegister.currentStatus"
                                [autocompleteResultLabelFunction]="namePropertyLabel"
                                [selectedItemLabelFunction]="namePropertyLabel">
         </autocomplete-dropdown>
-        <label class="label-up material-label">{{'user.form.current_status' | translate}}</label>
 
-        <div class="fs-m0 material-group-error" *ngIf="form.controls.currentStatus && form.controls.currentStatus.invalid && form.controls.currentStatus.touched">
-          {{'user.form.current_status.validation' | translate}}
-        </div>
+        <div *ngIf="errors.current_status" class="alert alert-danger">{{errors.current_status}}</div>
       </div>
 
-      <div class="material-group">
+      <div class="form-group material-group input-container">
         <autocomplete-dropdown [lookupType]="'list'" [enumList]="atUndStatuses"
+                               [placeholder]="'user.form.at_und' | translate"
+                               [group]="registrationForm.controls['at-und']"
                                [(destination)]="userRegister.atUndStatus"
                                [autocompleteResultLabelFunction]="namePropertyLabel"
                                [selectedItemLabelFunction]="namePropertyLabel">
         </autocomplete-dropdown>
-        <label class="label-up material-label">{{'user.form.at_und' | translate}}</label>
 
-        <div class="fs-m0 material-group-error" *ngIf="form.controls.atUndStatus && form.controls.atUndStatus.invalid && form.controls.atUndStatus.touched">
-          {{'user.form.at_und.validation' | translate}}
-        </div>
+        <div *ngIf="errors.atUndStatus" class="alert alert-danger">{{errors.atUndStatus}}</div>
       </div>
 
-      <div class="material-group">
-        <input type="date" id="arrived-at" [(ngModel)]="userRegister.arrivedAt" name="arrivedAt" class="material-input" [ngClass]="{'not-empty': userRegister.arrivedAt, 'has-error': errors.arrived_at}"
-               required pattern='^[0-9]{4}-(0[1-9]|1[0-2])-(0[1-9]|[1-2][0-9]|3[0-1])$'>
-        <label for="arrived-at" class="label-up material-label">{{'user.form.arrived_at' | translate}}</label>
+      <div class="form-group material-group input-container" [ngClass]="{'has-error':!registrationForm.controls['arrived-at'].valid && registrationForm.controls['email'].touched}">
+        <input class="form-control material-input" type="date" placeholder="{{'user.form.arrived_at' | translate}}"
+               [formControl]="registrationForm.controls['arrived-at']">
 
-        <div class="fs-m0 material-group-error" *ngIf="form.controls.arrivedAt && form.controls.arrivedAt.invalid && form.controls.arrivedAt.touched">
-          {{'user.form.arrived_at.validation' | translate}}
-        </div>
-        <div class="fs-m0 material-group-error" *ngIf="errors.arrived_at">
-          {{errors.arrived_at}}
-        </div>
+        <div *ngIf="!registrationForm.controls['arrived-at'].valid && registrationForm.controls['arrived-at'].touched"
+             class="alert alert-danger">{{'user.form.arrived_at.validation' | translate}}.</div>
+        <div *ngIf="errors.arrived_at" class="alert alert-danger">{{errors.arrived_at}}</div>
       </div>
 
-      <div class="material-group">
+      <!--<div class="material-group">
         <autocomplete-dropdown [lookupType]="'list'" [enumList]="countries"
                                [(destination)]="userRegister.countryOfOrigin"
                                [autocompleteResultLabelFunction]="namePropertyLabel"
                                [selectedItemLabelFunction]="namePropertyLabel">
         </autocomplete-dropdown>
         <label class="label-up material-label">{{'user.form.country_of_origin' | translate}}</label>
+      </div>-->
+
+      <div class="form-group material-group input-container" [ngClass]="{'has-error':!registrationForm.controls['password'].valid && registrationForm.controls['password'].touched}">
+        <input class="form-control material-input" type="password" placeholder="{{'user.form.password' | translate}}"
+               [formControl]="registrationForm.controls['password']">
+
+        <div *ngIf="!registrationForm.controls['password'].valid && registrationForm.controls['password'].touched"
+             class="alert alert-danger">{{'user.form.password.validation' | translate}}.</div>
+        <div *ngIf="errors.password" class="alert alert-danger">{{errors.password}}</div>
       </div>
 
-      <div class="material-group">
-        <input type="password" id="password" [(ngModel)]="userRegister.password" name="password" class="material-input" [ngClass]="{'not-empty': userRegister.password, 'has-error': errors.password}" required>
-        <label for="password" class="material-label">{{'user.form.password' | translate}}</label>
+      <div class="form-group material-group input-container" [ngClass]="{'has-error':!registrationForm.controls['repeat-password'].valid && registrationForm.controls['repeat-password'].touched}">
+        <input class="form-control material-input" type="password" placeholder="{{'user.form.password' | translate}}"
+               [formControl]="registrationForm.controls['password']">
 
-        <div class="fs-m0 material-group-error" *ngIf="form.controls.password && form.controls.password.invalid && form.controls.password.touched">
-          {{'user.form.password.validation' | translate}}
-        </div>
-        <div class="fs-m0 material-group-error" *ngIf="errors.password">
-          {{errors.password}}
-        </div>
+        <div *ngIf="!registrationForm.controls['password'].valid && registrationForm.controls['password'].touched"
+             class="alert alert-danger">{{'user.form.passwordCompare.validation' | translate}}.</div>
+        <div *ngIf="errors.repeatPassword" class="alert alert-danger">{{errors.repeatPassword}}</div>
       </div>
 
-      <div class="material-group">
-        <input type="password" id="repeat-password" [(ngModel)]="userRegister.repeatPassword" name="repeatPassword" class="material-input" [ngClass]="{'not-empty': userRegister.repeatPassword}" required>
-        <label for="repeat-password" class="material-label">{{'user.form.password' | translate}}</label>
-
-        <div class="fs-m0 material-group-error" *ngIf="form.controls.repeatPassword && form.controls.repeatPassword.touched && userRegister.repeatPassword !== userRegister.password">
-          {{'user.form.passwordCompare.validation' | translate}}
-        </div>
-      </div>
-
-      <div class="material-group">
+      <div class="form-group material-group input-container">
         <input type="file" id="image-filename" name="imageFilename" class="material-input" (change)="onImageFilenameChange($event)" accept="image/*">
         <label class="label-up material-label" for="image-filename">{{'user.form.picture' | translate}}</label>
       </div>
 
-      <div class="form-group text-center">
-        <input type="checkbox" id="tac" name="tac" class="material-input" [(ngModel)]="userRegister.acceptedTermsAndConditions" required>
+      <div class="form-group text-center input-container"  [ngClass]="{'has-error':!registrationForm.controls['terms'].valid && registrationForm.controls['terms'].touched}">
+        <input type="checkbox" id="tac" name="tac" class="material-input" [formControl]="registrationForm.controls['terms']">
         <label for="tac">
           {{'terms.accept' | translate}} {{'terms' | translate}}
           <a href="/assets/terms/160523_2051-2_Terms_and_Conditions_(en).pdf" target="_blank"> PDF EN</a>,
@@ -150,8 +127,8 @@
         </label>
       </div>
 
-      <div class="text-center">
-        <button type="submit" class="button primary form-group" [disabled]="form.invalid">{{'common.continue' | translate}}</button>
+      <div class="text-center button-container">
+        <button type="submit" class="button primary form-group" [disabled]="!registrationForm.valid">{{'common.continue' | translate}}</button>
       </div>
     </form>
 
