--- a/src/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
+++ b/src/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
@@ -1,4 +1,4 @@
-<div class="autocomplete-dropdown text-left" [ngClass]="{disabled: isDisabled, 'wrap-mode': wrapMode}" (keyup.enter)="onEnterClick()" (keyup.arrowup)="onArrowClick(true)" (keyup.arrowdown)="onArrowClick(false)">
+<div [formGroup]="inputGroup" class="autocomplete-dropdown text-left" [ngClass]="{disabled: isDisabled, 'wrap-mode': wrapMode}" (keyup.enter)="onEnterClick()" (keyup.arrowup)="onArrowClick(true)" (keyup.arrowdown)="onArrowClick(false)">
   <div class="table max-width autocomplete-dropdown-container"
        [ngClass]="{'multiple-select': isMultipleSelect, selected: textInput && !isMultipleSelect}">
     <div class="table-row">
@@ -9,7 +9,7 @@
         <deletable-item *ngFor="let item of destination" [isDisabled]="isDisabled" [labelFunction]="selectedItemLabelFunction" [item]="item" (deleteSelectedItem)="onDeleteSelectedItem($event)"></deletable-item>
       </div>
       <div class="table-cell dropdown-text-input-container clickable" [ngClass]="{disabled: isDisabled || (maxItems > 1 && destination && destination.length >= maxItems)}" (click)="onInputClick()">
-        <input class="form-control" [disabled]="isDisabled || (maxItems > 1 && destination && destination.length >= maxItems)" type="text" placeholder="{{placeholder}}" [(ngModel)]="textInput" (ngModelChange)="onTextInputChange()"/>
+        <input class="form-control" formControlName="inputControl" [disabled]="isDisabled || (maxItems > 1 && destination && destination.length >= maxItems)" type="text" placeholder="{{placeholder}}" [(ngModel)]="textInput" (ngModelChange)="onTextInputChange()"/>
         <div class="drop-down-arrow" [ngClass]="{disabled: maxItems > 1 && destination && destination.length >= maxItems}"><i class="fa fa-angle-down fa-2x"></i></div>
       </div>
     </div>
