--- a/src/app/views/user/user-register/user-register.component.scss
+++ b/src/app/views/user/user-register/user-register.component.scss
@@ -3,3 +3,65 @@
 .user-register {
   background-color: $default-bg-color;
 }
+
+.page-header {
+  background-color: $color-primary-cerise;
+  padding: 1em 0;
+
+  h3 {
+    position: relative;
+    top: 5px;
+    color: $white;
+  }
+
+}
+
+.page-form-container {
+  background-color: $default-bg-color;
+  margin-right: -15px;
+  margin-left: -15px;
+
+  .textarea {
+    width: 50%;
+    margin: 0 auto;
+    padding-top: 30px;
+    p {
+      text-align: center;
+      vertical-align: middle;
+    }
+  }
+
+  .envelope-icon-container {
+    margin: 0 auto;
+    width: 50%;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 50px;
+    i {
+      color: $color-primary-cerise;
+    }
+  }
+
+  .input-container {
+    width: 75%;
+    margin: 0 auto;
+    padding-bottom: 1.5em;
+    position: relative;
+
+    > textarea {
+      overflow: hidden;
+      word-wrap: break-word;
+      border-color: black;
+    }
+  }
+
+  .button-container {
+    width: 80%;
+    margin: 0 auto;
+    padding-bottom: 1.5em;
+    button {
+      margin: 0;
+      width: 100%;
+    }
+  }
+}
