--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,7 +1,6 @@
-<div class="container-fluid">
+<div class="login-container">
 
-  <div class="login-header row">
-    <!-- All Questions -->
+  <div class="login-header-container">
     <div class="col-xs-12">
       <h3>
         {{'login.title' | translate}}
